Reactivate the 'Insert series..' action.
Fix repainting after sheet protection changes.
Fix the border painting of the column/row headers and the select all button.
Fix the right mouse button interaction for the column/row headers.
Allow to select multiple cells after using a reference selection widget (e.g. in goal seek dialog).
Fix the goal seek dialog/command.

Developer-Visible Only
----------------------
Improved the function module loading/unloading. (@PACKAGERS: plugin interface changed!)
Implement models for Map/Sheet/Region.




Changes for KSpread 1.5 Beta 1
==============================

Features
--------
Non-contiguous selection
Rewritten dependency handling
Embedded picture/image inside workbook
Improved and faster formula calculation
Manual line break (wish #9881)
Syntax highlight and function autocomplete for formula editing
Custom sheet selection and ordering in print dialog

Enhancements
------------
QWhatsThis help is available to various dialogs
Updated dialog screenshot in the handbook
Default autofill increment is set to 1 if only one cell is selected
Sum button automatically selects a suitable cell range
Percent operator in formula (wish #101217)
Improved zoomed printouts (bug #115879)
Use standard KDE font dialog in cell format dialog (bug #116991)
Faster redraw of merged cells (bug #118248)

Bug Fixes
---------
#120234: Freeze on circular reference
#120232: Strange behaviour on creating new file
#120204: Cell comment isn't wrapped
#119675: Background brush color is not correctly loaded
#119097: Right arrow for entry and validation
#118769: Better wording cursor movement setting
#117435: Incorrect result from COUNTIF function
#117252: Fix date (and time) increment for autofill
#116903: Indentation setting is not correctly handled in preferences
#116901: Unclear unit setting in preferences
#116702: Fix freeze with certain spreadsheet content
#116546: Endless dependency calculation
#116444: Fix cell protection